force-app/main/default/objects/Daily_Idle_View__c/Daily_Idle_View__c.object-meta.xml
<CustomObject>
    <label>Daily Idle View</label>
    <nameField>
        <displayFormat>DIV-{00000}</displayFormat>
        <label>Daily Idle View Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Idle View</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>