force-app/main/default/objects/Daily_Idle_View__c/fields/BD_User__c.field-meta.xml
<CustomField>
    <fullName>BD_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BD User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Daily_Idle_View</relationshipName>
    <type>Lookup</type>
</CustomField>