force-app/main/default/objects/Daily_Idle_View__c/fields/Max_Idle_Slot_Time__c.field-meta.xml
<CustomField>
    <fullName>Max_Idle_Slot_Time__c</fullName>
    <label>Max Idle Slot Time</label>
    <summarizedField>Idle_Time_Report__c.Total_Idle_Time__c</summarizedField>
    <summaryForeignKey>Idle_Time_Report__c.Daily_Idle_View__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>