force-app/main/default/objects/Daily_Idle_View__c/fields/Total_Idle_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Idle_Time__c</fullName>
    <label>Total Idle Time</label>
    <summarizedField>Idle_Time_Report__c.Total_Idle_Time__c</summarizedField>
    <summaryForeignKey>Idle_Time_Report__c.Daily_Idle_View__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>