force-app/main/default/objects/Daily_Idle_View__c/listViews/Todays_Idle_Time.listView-meta.xml
<ListView>
    <fullName>Todays_Idle_Time</fullName>
    <columns>NAME</columns>
    <columns>BD_User__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Max_Idle_Slot_Time__c</columns>
    <columns>Min_Idle_Slot_Time__c</columns>
    <columns>Total_Idle_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>Yesterdays Idle Time</label>
</ListView>